# fhir-py-types

./: Dockerfile  LICENSE  Pipfile  README.md  compose.yaml  main.py  patient.edn  pyproject.toml  ruff.toml
.github/workflows/: spec_regression_test.yml  static-code-analysis-and-tests.yml  synthea_regression_test.yml  test.yml
examples/: fhirpy.ipynb
fhir_py_types/: __init__.py  ast.py  cli.py  header.py.tpl
fhir_py_types/reader/: bundle.py
regression/synthea/: .gitignore  download_sample_bundle.sh  r4.bundle.checksumfile  test_synthea_samples.py
spec/: .gitignore  bundle.checksumfile  download_spec_bundle.sh  r5.bundle.checksumfile
tests/: test_ast.py
