[tool.poetry]
name = "fhir-py-types"
version = "0.1.0"
description = ""
authors = ["beda.software <info@beda.software>"]
packages = [{include = "fhir_py_types"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
pytest = "^7.2.1"

[tool.poetry.group.typecheckers]
optional = true

[tool.poetry.group.typecheckers.dependencies]
mypy = "^0.991"

[tool.poetry.scripts]
typegen = "fhir_py_types.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
